# HighloadCup2017

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Main.cpp  README.md  RunClangTidyChecks.py
DataExtracter/: DataExtracter.cpp  DataExtracter.h
DataStorage/: CMakeLists.txt  DataStorage.cpp  DataStorage.h  IDataStorage.h  IndexedDataStorage.cpp  IndexedDataStorage.h
DataStorage/Entities/: DataTypes.h  EntitiesValidator.cpp  EntitiesValidator.h  IDeserializable.h  ISerializable.h  IValidateable.h  Identifiable.h  Location.cpp  Location.h  User.cpp  User.h  Visit.cpp  Visit.h
Entities/: DataTypes.h  IDeserializable.h  Identifiable.h  Location.cpp  Location.h  User.cpp  User.h  Visit.cpp  Visit.h
HttpParser/: CMakeLists.txt  HttpParser.cpp  HttpParser.h
HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpServerBoost.cpp  HttpServerBoost.h  IRequestProcessor.h  RequestProcessor.cpp  RequestProcessorSimple.h
Scripts/: docker_build_and_push.sh
Submodules/: CMakeLists.txt
Tests/: CMakeLists.txt  JsonComparableTest.h  Main.cpp  TestDataLoadableTest.h  TimeMeasurableTest.h
Tests/DataStorageTests/: GetEntitiesTest.cpp
Tests/DataStorageTests/AddEntityTests/: AddEntityTests.h
Tests/DataStorageTests/ComplexTests/: ComplexTests.h
Tests/DataStorageTests/ComplexTests/TestData/CheckAverageLocationAfterVisitAddTest/: location.json  users.json  visits.json
Tests/DataStorageTests/ComplexTests/TestData/CheckAverageLocationAfterVisitUpdateTest/: location.json  visits.json
Tests/DataStorageTests/ComplexTests/TestData/CheckVisitsByUserIdAfterVisitAddTest/: visits.json
Tests/DataStorageTests/ComplexTests/TestData/CheckVisitsByUserIdAfterVisitUpdateTest/: location.json
Tests/DataStorageTests/GetAverageLocationMarkTests/: GetAverageLocationMarkTests.h
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoLocationTest/: location.json  users.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksFoLocationTest/: visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksForLocationDueToFromAge/: location.json  users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksForLocationDueToFromDateTest/: users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksForLocationDueToGenderTest/: users.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksForLocationDueToToAgeTest/: users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/NoMarksForLocationDueToToDateTest/: visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/OneMarkFoLocationTest/: visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/ThreeMarksFoLocationTest/: visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/ThreeOfFourMarksForLocationDueToFromAgeTest/: users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/ThreeOfFourMarksForLocationDueToGenderTest/: users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/ThreeOfFourMarksForLocationDueToToAgeTest/: users.json  visits.json
Tests/DataStorageTests/GetAverageLocationMarkTests/TestData/ThreeOfFourMarksForLocationDueToToDateTest/: visits.json
Tests/DataStorageTests/GetEntityByIdTests/: GetEntityByIdTests.h
Tests/DataStorageTests/GetEntityByIdTests/TestData/: visits.json
Tests/DataStorageTests/GetVisitsByUserIdTests/: GetVisitsByUserIdTests.h
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/NoUserTest/: location.json
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/NoVisitsDueToCountryTest/: location.json
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/NoVisitsTest/: visits.json
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/ThreeOfFourVisitsDueToFromDateTest/: users.json  visits.json
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/TwoOfFourVisitsDueToCountryTest/: location.json  visits.json
Tests/DataStorageTests/GetVisitsByUserIdTests/TestData/TwoOfFourVisitsDueToToDistanceTest/: location.json
Tests/DataStorageTests/LoadDataTests/: LoadDataTests.h
Tests/DataStorageTests/LoadDataTests/TestData/NullExemplarOfEachEntityTest/: visits.json
Tests/DataStorageTests/LoadDataTests/TestData/OneExemplarOfEachEntityTest/: users.json
Tests/DataStorageTests/TestData/ReadData/: location.json  visits.json
Tests/DataStorageTests/UpdateEntityTests/: UpdateEntityTests.h
Tests/DataStorageTests/UpdateEntityTests/TestData/UpdateExistingLocationTest/: location.json  visits.json
Tests/DataStorageTests/UpdateEntityTests/TestData/UpdateExistingUserTest/: location.json
Tests/DataStorageTests/UpdateEntityTests/TestData/UpdateExistingVisitTest/: users.json
Tests/DataStorageTests/UpdateEntityTests/TestData/UpdateNonExistentEntitiesTest/: users.json
Tests/DataStorageTests/UpdateEntityTests/TestData/UpdateUserWhichNotExistTest/: visits.json
Utils/: CMakeLists.txt  Macroses.h  Traceable.h
